   * Fix crash in Remove text for HI" - thx indeed-a-genius
   * Fix "total seconds" in "Export custom format" - thx David
   * Fix mpv crash/hang after open 4+ videos
   * Add custom fade up/down for DCinema smpte - thx felagund
   * Fix reading last line with zero duration - thx darnn
   * Fix for column paste - thx OmrSi
   * Fix syntax coloring in "Fix common errors" - thx OmrSi


3.5.7 (9th August 2018)
* NEW:
   * Add new subtitle formats
   * Font can be different for subtitle list view / text box
   * Add Indonesian translation - thx Nicedward
   * Add support for mp4 dash ttml - thx Octirius
   * Add shortcut for toggle music symbols - thx robtor
   * Add shortcuts "Batch convert" + "waveform split"
   * Add shortcuts for bilingual line merge/split
   * Add "Shift+F3" shortcut for backward search - thx OmrSi/Leon
   * Add new setting: volume boost
   * Add new setting: "save as..." take file name from
   * Add download of ffmpeg
* IMPROVED:
   * Update Brazilian translation - thx Igor
   * Update Czech translation - thx Trottel
   * Update Hungarian translation - thx ZityiSoft Team
   * Update Turkish translation - thx Falcon006
   * Update Finnish translation - thx Teijo S
   * Update Bulgarian translation - thx KalinM
   * Update Chinese translation - thx Leon
   * Update Romanian translation - thx Mircea
   * Update Basque translation - thx Xabier
   * Update Portuguese translation - thx moob
   * Update Russian translation - thx Elheym
   * Update Tesseract OCR from 3.02 to 4.0 (beta 3)
   * Minor improvements for Video -> Generate/import scene changes
   * Remember OCR spell check dictionary for tesseract - thx raymondjpg
   * Add some style support to "Modify selection"
   * Ctrl+a/ctrl+d/ctrl+shift+i works in more lists - thx tormento
   * Add shortcut for open translator mode - thx OmrSi
   * Add shortcut "Go to previous sub (from video pos)" - thx OmrSi
   * Hide cursor in video fullscreen mode/mpv - thx OmrSi